--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
     <script src="https://kit.fontawesome.com/32602d8633.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Sass Project</title>
 </head>
 <body>
     <!-- NavBar section  -->
@@ -28,10 +28,10 @@
     <div class="hero">
         <div class="hero__container">
             <div class="hero__container--left">
-                <h1>They Coming!</h1>
-                <h2>Be prepared..</h2>
+                <h1>They are Coming</h1>
+                <h2>Be Prepared</h2>
                 <p>Sign Up now to join the list</p>
-                <button>Sing Up</button>
+                <button class="hero__container--btn">Sing Up</button>
             </div>
             <div class="hero__container--rigth">
                 <img 
